--- a/gb/20/9/15/n12406190.md
+++ b/gb/20/9/15/n12406190.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jevcue3934/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jevcue3934/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jevcue3934/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jevcue3934/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jevcue3934/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jevcue3934/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jevcue3934/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jevcue3934/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jevcue3934/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jevcue3934/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jevcue3934/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jevcue3934/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jevcue3934/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jevcue3934/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jevcue3934/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jevcue3934/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/jevcue3934/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jevcue3934/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/jevcue3934/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jevcue3934/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jevcue3934/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jevcue3934/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jevcue3934/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jevcue3934/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>英国独立法庭为何说中共是犯罪政权</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/D2.jpg" />
 <h6>图为北京紫禁城。(Guang Niu/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2020年09月16日讯】（大纪元记者李辰综合报导）“任何与中国（中共）在相关的医生、医疗机构、工业、旅游、航空、金融、律师、制药、保险、教育、艺术等领域，有实质性互动的政府，现在应认识到，他们所交往的是一个犯罪政权。”英国独立<ahref="https://github.com/jevcue3934/djy/blob/master/gb/tag/%E4%BA%BA%E6%B0%91%E6%B3%95%E5%BA%AD.md#1">人民法庭</a>在2020年3月发布的一份书面判决中说。</p>
-<p>这个<ahref="https://github.com/jevcue3934/djy/blob/master/gb/tag/%E7%8B%AC%E7%AB%8B%E6%B3%95%E5%BA%AD.md#1">独立法庭</a>由来自不同司法管辖区的七名成员组成小组，其中包括四名经验丰富的律师、一位著名的医学专家、一位学者和一名商人。没有任何成员是竞选活动家，激进主义者或是诋毁中国的人。</p>
+	<p>【大纪元2020年09月16日讯】（大纪元记者李辰综合报导）“任何与中国（中共）在相关的医生、医疗机构、工业、旅游、航空、金融、律师、制药、保险、教育、艺术等领域，有实质性互动的政府，现在应认识到，他们所交往的是一个犯罪政权。”英国独立<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%BA%E6%B0%91%E6%B3%95%E5%BA%AD.md#1">人民法庭</a>在2020年3月发布的一份书面判决中说。</p>
+<p>这个<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8B%AC%E7%AB%8B%E6%B3%95%E5%BA%AD.md#1">独立法庭</a>由来自不同司法管辖区的七名成员组成小组，其中包括四名经验丰富的律师、一位著名的医学专家、一位学者和一名商人。没有任何成员是竞选活动家，激进主义者或是诋毁中国的人。</p>
 <p>该法庭由英国御用大律师尼斯爵士（Sir Geoffrey Nice QC）主持，他曾主导国际刑事法庭对前南斯拉夫总统米洛舍维奇（Slobodan Milosevic）的起诉。</p>
-<p>英国独立<ahref="https://github.com/jevcue3934/djy/blob/master/gb/tag/%E4%BA%BA%E6%B0%91%E6%B3%95%E5%BA%AD.md#1">人民法庭</a>，为何说中共是犯罪政权？</p>
-<h2>中国不同寻常的短暂等待<ahref="https://github.com/jevcue3934/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md#1">器官</a>时间</h2>
+<p>英国独立<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%BA%E6%B0%91%E6%B3%95%E5%BA%AD.md#1">人民法庭</a>，为何说中共是犯罪政权？</p>
+<h2>中国不同寻常的短暂等待<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md#1">器官</a>时间</h2>
 <p>今年6月，中国武汉协和医院的医生在10天之内先后为24岁的孙玲玲准备了4颗匹配的心脏。</p>
-<p>这些<ahref="https://github.com/jevcue3934/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md#1">器官</a>来源成谜。“医生反对强摘器官组织（DAFOH）”的执行主任泰瑞（Torsten Trey）博士向英文大纪元表示，“问题在于，这4颗心脏来自哪里？”</p>
-<figure style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/08/Screen-Shot-2017-08-13-at-6.33.07-PM-600x400.png"><img class="size-large" src="https://i.epochtimes.com/assets/uploads/2017/08/Screen-Shot-2017-08-13-at-6.33.07-PM-600x400.png" width="600" b="400" /></a><figcaption class="wp-caption-text">“医生反对强摘器官组织”（简称DAFOH）执行董事托斯顿．泰瑞（Torsten Trey）医生。（陈柏州／大纪元）</figcaption></figure>
+<p>这些<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md#1">器官</a>来源成谜。“医生反对强摘器官组织（DAFOH）”的执行主任泰瑞（Torsten Trey）博士向英文大纪元表示，“问题在于，这4颗心脏来自哪里？”</p>
+<figure style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/08/Screen-Shot-2017-08-13-at-6.33.07-PM-600x400.png"><img class="size-large" src="https://i.epochtimes.com/assets/uploads/2017/08/Screen-Shot-2017-08-13-at-6.33.07-PM-600x400.png" width="600" b="400" /></a><figcaption class="wp-caption-text">“医生反对强摘器官组织”（简称DAFOH）执行董事托斯顿．泰瑞（Torsten Trey）医生。（陈柏州／大纪元）</figcaption></figure>
 <p>泰瑞（Torsten Trey）指出，根据美国政府2018年的最新数据，美国病人通常需等待6.9个月才能获得匹配的心脏。按照这个比例，为同一病患寻找到4个匹配的心脏——这意味着有4人在ICU病房或其它致命事故中死后捐献他们的器官——这大概需要等待2年的时间。</p>
 <p>为何在美国需要等待2年，而在中国只需等待10天？</p>
 <p>根据2020年数据，在美国，超过1.56亿人，即超过美国一半的人口，同意死后捐献器官。</p>
@@ -27,15 +27,15 @@
 <p>2017年6月1～6月30日，吉林旅游广播和吉林大学第一医院肝脏移植中心联合发起一个月的前10名儿童免费肝脏移植活动。</p>
 <p>人们不禁要问，中共充足的供体器官来自哪里？</p>
 <h2>英国独立人民法庭的判决</h2>
-<figure style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/06/11-600x400.jpeg"><img class="size-large" src="https://i.epochtimes.com/assets/uploads/2019/06/11-600x400.jpeg" width="600" b="400" /></a><figcaption class="wp-caption-text">“人民法庭”2019年6月17日在伦敦。（冠奇／大纪元）</figcaption></figure>
-<p>2020年3月，位于英国伦敦的独立人民法庭发表最后的书面判决，判决作出以下结论：</p>
-<p>“（活体）强摘人体器官已在中国各地大规模发生多年，<ahref="https://github.com/jevcue3934/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员是其中一个——而且可能是主要的——人体器官来源。”</p>
+<figure style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/06/11-600x400.jpeg"><img class="size-large" src="https://i.epochtimes.com/assets/uploads/2019/06/11-600x400.jpeg" width="600" b="400" /></a><figcaption class="wp-caption-text">“人民法庭”2019年6月17日在伦敦。（冠奇／大纪元）</figcaption></figure>
+<p>2020年3月，位于英国伦敦的独立人民法庭发表最后的书面判决，判决做出以下结论：</p>
+<p>“（活体）强摘人体器官已在中国各地大规模发生多年，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员是其中一个——而且可能是主要的——人体器官来源。”</p>
 <p>“集中针对维吾尔人口的迫害和医学检查是比较近期的情况。”</p>
 <p>书面判决还表示，“（中共的医生和医院所保证的）器官移植的等待时间不寻常的短暂。”</p>
 <p>“有不断累积的大量证据表明：中国（中共）最近建立的器官自愿捐献系统，根本不能提供如此大规模手术所需要的器官数量。”</p>
-<h2>中共逾百万例器官移植手术 <ahref="https://github.com/jevcue3934/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98.md#1">活摘</a><ahref="https://github.com/jevcue3934/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员器官</h2>
+<h2>中共逾百万例器官移植手术 <ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98.md#1">活摘</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员器官</h2>
 <p>2006年3月，原沈阳苏家屯血栓医院护士安妮在华盛顿DC作证，她的前夫、苏家屯血栓医院的外科医师，曾活体摘取过大约两千名法轮功学员的眼角膜。</p>
-<p>此后，国际社会发布约十起调查报告，指证中共<ahref="https://github.com/jevcue3934/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98.md#1">活摘</a>法轮功学员等良心犯器官。</p>
+<p>此后，国际社会发布约十起调查报告，指证中共<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98.md#1">活摘</a>法轮功学员等良心犯器官。</p>
 <p>2016年6月22日，《血腥的器官摘取/大屠杀：更新版》，在美国华府发布。</p>
 <p>三位联合作者：加拿大前亚太司长大卫?乔高、美国资深调查记者伊森?葛特曼和加拿大人权律师大卫?麦塔斯表示，中国每年的器官移植数量约在6万至10万之间，远高于中共宣称的每年一万例。</p>
 <p>三位作者表示，在过去的十五年中，在大陆，估计进行了大约150万例器官移植手术。器官的主要来源是法轮功学员。</p>
@@ -45,11 +45,11 @@
 <p>他们因上访不报姓名而被秘密关押。没人知道他们身在何处，他们像人间蒸发了一样，一去不复返，家人们苦盼着亲人能回来，但是年复一年，音讯全无。</p>
 <p>法轮功是以“真、善、忍”为指导原则的性命双修功法，包括五套功法动作，1992年在中国长春传出，广受欢迎。官方统计数字显示，法轮功学员超过了共产党党员人数。1999年7月20日，中共时任党魁江泽民下令对其发动灭绝性的迫害。</p>
 <p>据明慧网2016年5月7日发布的一份数据，仅辽宁省法轮功学员失踪者有据可查的至少有169人。以下仅举几例：</p>
-<figure style="width: 119px" class="wp-caption aligncenter"><ahref=" http://www.minghui.org/mh/article_images/2005-1-17-xuqiang.jpg"><img class="size-large" src=" http://www.minghui.org/mh/article_images/2005-1-17-xuqiang.jpg" width="119" b="157" /></a><figcaption class="wp-caption-text">徐强（明慧网）</figcaption></figure>
+<figure style="width: 119px" class="wp-caption aligncenter"><a target="_blank" href=" http://www.minghui.org/mh/article_images/2005-1-17-xuqiang.jpg"><img class="size-large" src=" http://www.minghui.org/mh/article_images/2005-1-17-xuqiang.jpg" width="119" b="157" /></a><figcaption class="wp-caption-text">徐强（明慧网）</figcaption></figure>
 <p>徐强，男，辽宁锦州市法轮功学员，1972年出生。2000年5月末，徐强去北京为法轮功鸣冤。2000年6月2日下午三点多钟，徐强曾从北京给锦州的朋友打来电话，让他母亲给他带些钱。之后徐强就失踪了，至今杳无音信。他的亲人一直在痛苦中煎熬……</p>
-<figure style="width: 100px" class="wp-caption aligncenter"><ahref=" http://www.minghui.org/mh/article_images/2011-2-19-minghui-dalian-fuguiwu.jpg"><img class="size-large" src=" http://www.minghui.org/mh/article_images/2011-2-19-minghui-dalian-fuguiwu.jpg" width="100" b="150" /></a><figcaption class="wp-caption-text">付贵武（明慧网）</figcaption></figure>
+<figure style="width: 100px" class="wp-caption aligncenter"><a target="_blank" href=" http://www.minghui.org/mh/article_images/2011-2-19-minghui-dalian-fuguiwu.jpg"><img class="size-large" src=" http://www.minghui.org/mh/article_images/2011-2-19-minghui-dalian-fuguiwu.jpg" width="100" b="150" /></a><figcaption class="wp-caption-text">付贵武（明慧网）</figcaption></figure>
 <p>付贵武，男，大连市金州区二十里堡镇法轮功学员，成都理工大学毕业生。自2000年初，前往成都找工作后就毫无音讯。他的母亲担心儿子早已不在人世了。付贵武母亲说：“这十年来你都不知道我都怎么过来的。我就怕他不在这世上了，可能叫它们（中共当局）给害死了，都有给挖心挖肝的。”</p>
-<figure style="width: 188px" class="wp-caption aligncenter"><ahref=" http://www.minghui.org/mh/article_images/2010-8-14-liaoningsunyu.jpg"><img class="size-large" src=" http://www.minghui.org/mh/article_images/2010-8-14-liaoningsunyu.jpg" width="188" b="242" /></a><figcaption class="wp-caption-text">孙宇（孙羽）（明慧网）</figcaption></figure>
+<figure style="width: 188px" class="wp-caption aligncenter"><a target="_blank" href=" http://www.minghui.org/mh/article_images/2010-8-14-liaoningsunyu.jpg"><img class="size-large" src=" http://www.minghui.org/mh/article_images/2010-8-14-liaoningsunyu.jpg" width="188" b="242" /></a><figcaption class="wp-caption-text">孙宇（孙羽）（明慧网）</figcaption></figure>
 <p>孙宇（孙羽），男，辽宁省丹东市法轮功学员，于1999年考入大连市大连水产学院，就读于电子信息专业。2002年12月31日，孙羽向同学散发法轮功真相传单，被举报。警察来学校将孙宇看管起来，进行训斥；后来时间已经很晚了，他们带孙羽去校外小饭店吃饭，就再没回来。至今已近十几年的时间，杳无音信，孙羽与家人没有任何联系。家人、亲戚、朋友、同学、邻居，都不知道他的下落。</p>
 <p>……</p>
 <h2>持续20年针对法轮功学员非常规性的抽血采血</h2>
@@ -68,7 +68,7 @@
 <p>“追查国际”表示，“大量的调查录音指向一个事实：即这些活体摘取法轮功学员器官的事件，不是个别的、局部的、偶然发生的杀人事件，而是由江泽民亲自下令、在全国范围内利用军队、武警、司法及医疗等系统以活摘器官方式，针对法轮功修炼群体的大屠杀。”</p>
 <h2>政要专家：制裁中共 起诉中共 解体中共</h2>
 <p>2016年6月13日，美国国会众议院表决一致通过了343号决议案，要求中共立即停止针对法轮功学员等良心犯的“强摘器官”行为。</p>
-<p>英国保守党人权委员会的联合创始人兼副主席本尼迪克特?罗杰斯（Benedict Rogers）近期在网站UCANEWS发表文章提出：“如果人们要使中共对其在瘟疫大流行中的（掩盖行为）承担责任，就不应该忽视另一个与医疗相关的暴行，那就是（中共）从良心犯身上摘取器官的报导。”</p>
+<p>英国保守党人权委员会的联合创始人兼副主席本尼迪克特?罗杰斯（Benedict Rogers）近期在网站UCANEWS发表文章提出：“如果人们要使中共对其在瘟疫大流行中的（掩盖行为）承担责任，就不应该忽视另一个与医疗相关的暴行，那就是（中共）从良心犯身上摘取器官的报吿。”</p>
 <p>就中国最近发生的可疑活摘人体器官事件，美国国际宗教自由委员会委员加里·鲍尔（Gary Bauer）2020年8月14日表示，“美国国务院和财政部应做好准备，对那些授权或参与了强摘器官的任何中共官员、医生或机构，实施针对性的制裁。”</p>
 <p>2020年7月1日，美国众议院议员斯科特?佩里（Scott Perry）表示，中共是犯罪组织，解体中共的倡议是个好主意。</p>
 <p>他说，“中共被控犯有许多罪行。如果他们未受到起诉、未受调查，他们将继续实施这些犯罪。”</p>
@@ -79,42 +79,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jevcue3934/djy/blob/master/gb/20/5/3/n12078752.md#1">调查世卫和中共关系 川普手握一张王牌</a></li>
-<li><a href="https://github.com/jevcue3934/djy/blob/master/gb/20/5/28/n12143975.md#1">美委员会要求川普终结中共强摘人体器官</a></li>
-<li><a href="https://github.com/jevcue3934/djy/blob/master/gb/20/5/31/n12150703.md#1">美委员会为何要求川普终结中共强摘人体器官</a></li>
-<li><a href="https://github.com/jevcue3934/djy/blob/master/gb/20/6/7/n12168705.md#1">八大调查指证中共强摘人体器官</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/3/n12078752.md#1">调查世卫和中共关系 川普手握一张王牌</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/28/n12143975.md#1">美委员会要求川普终结中共强摘人体器官</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/31/n12150703.md#1">美委员会为何要求川普终结中共强摘人体器官</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/6/7/n12168705.md#1">八大调查指证中共强摘人体器官</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/15/n10145540.md#1" target="_blank">关敏：不许鼓吹“蒋经国时代”</a></li><li><a href="https://github.com/jevcue3934/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7544340.md#1" target="_blank">大陆律师在法庭上揭穿“天安门自焚”伪案</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/18/n11196004.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(1)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385414.md#1" target="_blank">20年前 澳洲西人为法轮功赴京上访（下）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/13/n12401109.md#1">【薇羽看世间】一代奸相周恩来（上）</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/8/n12388668.md#1">乱世佳人的守护天使</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/3/n12378183.md#1">书生神游天宫 原来世人多从天上来</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/8/10/n12319003.md#1">【命理】身居高位却在晚年被斩首的命</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/12/n12397963.md#1">【大时代华人】一根“牙签”背后的爱情</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/14/n12403070.md#1">【有冇搞错】中共虚张声势 夺东沙岛可能性小</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/15/n12404021.md#1">【十字路口】监控240万名人 中国内循环能打通？</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/14/n12403006.md#1">【珍言真语】王岸然：中共是股市最大操控者</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/13/n12400181.md#1">川普所说中俄都不知道的核武 可能是指这个</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/12/n12399440.md#1">【新闻看点】党内造反！习中央连下狠手</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/13/n12400671.md#1">中芯大股东负债千亿 中共半导体国企陷危机</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/13/n12400838.md#1">与成龙有关？吴绮莉自曝女儿有已故兄弟姐妹</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/13/n12401048.md#1">为同父异母妹妹加油 孙俪获邓超妇唱夫和</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/13/n12401224.md#1">杨颖和黄晓明穿情侣装 补税风波后首度放闪</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/14/n12403678.md#1">杨超越回应演技争议 大陆演艺圈鄙视链曝光</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/13/n12400155.md#1">詹雅雯再度唱进小巨蛋 邀陈时中登台高歌</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/13/n12400181.md#1">川普所说中俄都不知道的核武 可能是指这个</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/14/n12402358.md#1">抬升90度？ 中共官媒秀模型飞机画面遭取笑</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/12/n12399287.md#1">徒手松筋膜骨盆！治疗师传授4招 矫正骨盆歪斜</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/13/n12400021.md#1">为了救主人 印度忠狗自己被电死</a></li>
-<li><a href="https://github.com/sbcwca310/djy/blob/master/gb/20/9/14/n12401895.md#1">《时代》黑边封面悼20万病故者 赞台湾防疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jevcue3934/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jevcue3934/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/15/n12406190.htm">英国独立法庭为何说中共是犯罪政权</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/15/n12406190.htm">英国独立法庭为何说中共是犯罪政权</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/jevcue3934/djy/blob/master/gb/20/9/15/n12406190.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jevcue3934/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jevcue3934/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jevcue3934/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jevcue3934/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jevcue3934/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/9/15/n12406190.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
